<?xml version="1.0"?>
<package format="3">
  <name>pecka_tvmc_msg</name>
  <version>0.0.1</version>
  <description>Contains messages for pecka_tvmc</description>

  <maintainer email="auv.society@iiitdm.ac.in">Pecka</maintainer>

  <license>MIT</license>
  
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
	<build_type>ament_cmake</build_type>
  </export>
</package>
